# sqlite-rs

./: Cargo.toml
sqlite-decoder/: Cargo.toml
sqlite-decoder/src/: btree.rs  db.rs  lib.rs  util.rs  wal.rs
sqlite-encoder/: Cargo.toml
sqlite-encoder/src/: db.rs  lib.rs  wal.rs
sqlite-opcode/: Cargo.toml
sqlite-opcode/src/: constant.rs  lib.rs
sqlite-pagecache/: Cargo.toml
sqlite-pagecache/src/: ffi_bindgen.rs  lib.rs
sqlite-sql/: Cargo.toml
sqlite-sql/src/: lib.rs
sqlite-table/: Cargo.toml
sqlite-table/src/: lib.rs
sqlite-types/: Cargo.toml
sqlite-types/src/: lib.rs
sqlite-wal/: Cargo.toml
sqlite-wal/src/: lib.rs
sqlite-wal/test/: create-test-and-test2-table.wal  create-test-table.wal  delete-test-table.wal  existing.db3  vacuum.wal
