[package]
name = "sqlite-decoder"
version = "0.1.0"
edition = "2021"
description = "SQLite WAL and database formats decoder"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
license = "MIT OR Apache-2.0"
keywords = ["sqlite", "decoder", "wal", "database", "b-tree"]
repository = "https://github.com/xtuc/sqlite-rs/tree/main/sqlite-decoder"

[dependencies]
nom = "7"
sqlite-types = { path = "../sqlite-types", version = "0.1.0" }
