[package]
name = "sqlite-encoder"
version = "0.1.0"
edition = "2021"
description = "SQLite WAL and database formats encoder"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
license = "MIT OR Apache-2.0"
keywords = ["sqlite", "encoder", "wal", "database"]
repository = "https://github.com/xtuc/sqlite-rs/tree/main/sqlite-encoder"

[dependencies]
sqlite-types = { path = "../sqlite-types", version = "0.1.0" }
