[package]
name = "sqlite-opcode"
version = "0.1.0"
edition = "2021"
description = "SQLite opcodes and query planning"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
license = "MIT OR Apache-2.0"
keywords = ["sqlite", "opcode"]
repository = "https://github.com/xtuc/sqlite-rs/tree/main/sqlite-opcode"

[dependencies]
strum = "0.24"
strum_macros = "0.24"
serde_json = "1.0"
sqlite-table = { path = "../sqlite-table", version = "0.1.0" }
