[package]
name = "sqlite-wal"
version = "0.1.0"
edition = "2021"
description = "SQLite WAL manipulations"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
license = "MIT OR Apache-2.0"
keywords = ["sqlite", "wal"]
repository = "https://github.com/xtuc/sqlite-rs/tree/main/sqlite-wal"

[dependencies]
sqlite-types = { path = "../sqlite-types", version = "0.1.0" }
sqlite-decoder = { path = "../sqlite-decoder", version = "0.1.0" }
